re PR c++/48369 ([C++0x] ICE  in potential_constant_expression_1, at cp/semantics.c:7746)

PR c++/48369
	* semantics.c (potential_constant_expression_1): Handle
	UNORDERED_EXPR and ORDERED_EXPR.

From-SVN: r171746